[package]
name = "ip-api-api"
version = "0.0.0"
authors = ["vkill <vkill.net@gmail.com>"]
edition = "2021"
description = "IP-API.com Api"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/bk-rs/ip-api-rs"
homepage = "https://github.com/bk-rs/ip-api-rs"
documentation = "https://docs.rs/ip-api-api"
keywords = []
categories = []
readme = "README.md"

[dependencies]
http-api-client-endpoint = { version = "0.2" }

serde = { version = "1.0", default-features = false, features = ["std", "derive"] }
chrono = { version = "0.4", default-features = false, features = ["serde"] }
chrono-tz = { version = "0.6", default-features = false }
serde-enum-str = { version = "0.2", default-features = false }
url = { version = "2.2", default-features = false }
serde-field-default = { version = "0.1", default-features = false, features = ["std", "chrono", "chrono-tz"] }
serde-field-with = { version = "0.1", default-features = false, features = ["alloc"] }

serde_json = { version = "1.0", default-features = false, features = ["std"] }
