[package]
name = "ip-api-api-demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "json"
path = "src/json.rs"

[[bin]]
name = "batch"
path = "src/batch.rs"

[dependencies]
ip-api-api = { path = ".." }

http-api-reqwest-client = { version = "0.3" }

futures-lite = { version = "2" }
pretty_env_logger = { version = "0.5" }
