[package]
name = "ip-api-api-demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "json"
path = "src/json.rs"

[[bin]]
name = "batch"
path = "src/batch.rs"

[dependencies]
ip-api-api = { path = ".." }

http-api-reqwest-client = { version = "0.3" }

tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
pretty_env_logger = { version = "0.5" }
